--- a/rapport.tex
+++ b/rapport.tex
@@ -104,7 +104,7 @@ La différence est logique et s'explique par le fait que moins il y a d'espaceme
 \begin{figure}[H]
 \centering
 \includegraphics[scale=0.50]{3lambda.png}
-\caption{\label{fig:rf_taille_noeud} $\lambda$ = 20,40,60, $users$ = 5000}
+\caption{\label{fig:rf_taille_noeud} $\lambda$ = 20, 40, 60, $users$ = 5000}
 \end{figure}
 
 
@@ -138,7 +138,7 @@ Ce qui signifie ici que, aù delà d'un certain seuil, l'utilisateur a des chanc
 \begin{figure}[H]
 \centering
 \includegraphics[scale=0.50]{3lambdapareto.png}
-\caption{\label{fig:rf_taille_noeud} $\lambda$ = 20,40,60, $users$ = 5000 Pareto}
+\caption{\label{fig:rf_taille_noeud} $\lambda$ = 20, 40, 60, $users$ = 5000 Pareto}
 \end{figure}
 
 
